    there isn't a target-specific environment.

  - Add new "rsrcpath" and "rsrcdir" and attributes to $TARGET/$SOURCE,
    so Builder command lines can find things in Repository source
    directories when using BuildDir.

  - Fix the M4 Builder so that it chdirs to the Repository directory
    when the input file is in the source directory of a BuildDir.

  From Vincent Risi:

  - Add support for the bcc32, ilink32 and tlib Borland tools.

  From Anthony Roach:

  - Supply an error message if the user tries to configure a BuildDir
    for a directory that already has one.

  - Remove documentation of the still-unimplemented -e option.

  - Add -H help text listing the legal --debug values.

  - Don't choke if a construction variable is a non-string value.

  - Build Type Libraries in the target directory, not the source
    directory.

  From Greg Spencer:

  - Add support for Microsoft Visual Studio 2003 (version 7.1).

  - Evaluate $MSVSPROJECTSUFFIX and $MSVSSOLUTIONSUFFIX when the Builder
    is invoked, not when the tool is initialized.

  From Christoph Wiedemann:

  - When compiling Qt, make sure the moc_*.cc files are compiled using
    the flags from the environment used to specify the target, not
    the environment that first has the Qt Builders attached.



RELEASE 0.94 - Fri, 07 Nov 2003 05:29:48 -0600

  From Hartmut Goebel:

  - Add several new types of canned functions to help create options:
    BoolOption(), EnumOption(), ListOption(), PackageOption(),
    PathOption().

  From Steven Knight:

  - Fix use of CPPDEFINES with C++ source files.

  - Fix env.Append() when the operand is an object with a __cmp__()
    method (like a Scanner instance).

  - Fix subclassing the Environment and Scanner classes.

  - Add BUILD_TARGETS, COMMAND_LINE_TARGETS and DEFAULT_TARGETS variables.

  From Steve Leblanc:

  - SGI fixes:  Fix C++ compilation, add a separate Tool/sgic++.py module.

  From Gary Oberbrunner:
